--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <div id="wrapper">
-	<!-- <h1>AWESOME STARTUP DIRECTORY EMPLOYEE DIRECTORY<h1> -->
+	<p id="employee-header">Awesome Startup Employee Directory</p>
 	<ul id="employees">
 	</ul>
-	<div id="modal">
+	
+</div>
+<div id="modal">
 		
 	</div>
-</div>
 <script
   src="http://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
